New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_mantle_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort


› 1. GPT-5.6 Sol (current)  Older coding model for complex work.
  2. GPT-6-Astra            Frontier intelligence for the most demanding work.
  3. GPT-5.6 Terra          Older balanced model for straightforward work.
  4. GPT-5.6 Luna           Older fast and efficient model.
  5. GPT-5.5                Legacy coding model.
  6. GPT-5.4                Strong model for everyday coding.

  enter select · esc back
