New folder/open-interpreter/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completion_after_plain_answer.snap
---
source: tui/src/chatwidget/tests/completion_styling_tests.rs
expression: normalize_completion_timestamps(& (text))
---
• The change is ready.

  Worked for [duration] · [completion time]
